// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`semanticSearch create should create and save new search 1`] = `
Object {
  "__v": 0,
  "creationDate": 1000,
  "documents": Array [
    Object {
      "sharedId": "doc1",
      "status": "pending",
    },
    Object {
      "sharedId": "doc2",
      "status": "pending",
    },
  ],
  "language": "en",
  "searchTerm": "Test term",
  "status": "pending",
}
`;

exports[`semanticSearch getSearch should fetch a search by id and its document entities with filtered semantic search results 1`] = `
Object {
  "documents": Array [
    Object {
      "sharedId": "doc1",
      "status": "completed",
    },
    Object {
      "sharedId": "doc2",
      "status": "completed",
    },
  ],
  "language": "en",
  "results": Array [
    Object {
      "documents": Array [
        Object {
          "entity": "doc2",
          "language": "en",
          "type": "document",
        },
      ],
      "language": "en",
      "semanticSearch": Object {
        "numRelevant": 2,
        "relevantRate": 0.6666666666666666,
        "results": Array [
          Object {
            "page": 1,
            "score": 0.8,
            "sentence": "that",
          },
          Object {
            "page": 4,
            "score": 0.6,
            "sentence": "then",
          },
          Object {
            "page": 2,
            "score": 0.1,
            "sentence": "what",
          },
        ],
        "sharedId": "doc2",
        "totalResults": 3,
      },
      "sharedId": "doc2",
    },
    Object {
      "documents": Array [
        Object {
          "entity": "doc1",
          "language": "en",
          "type": "document",
        },
      ],
      "language": "en",
      "semanticSearch": Object {
        "numRelevant": 1,
        "relevantRate": 0.5,
        "results": Array [
          Object {
            "page": 1,
            "score": 0.5,
            "sentence": "stuff",
          },
          Object {
            "page": 2,
            "score": 0.2,
            "sentence": "this",
          },
        ],
        "sharedId": "doc1",
        "totalResults": 2,
      },
      "sharedId": "doc1",
    },
  ],
  "searchTerm": "torture",
  "status": "completed",
}
`;

exports[`semanticSearch getSearchResults should return search results filtered with the specified args and sorted by proportion of relevant docs 1`] = `
Array [
  Object {
    "numRelevant": 3,
    "relevantRate": 0.75,
    "results": Array [
      Object {
        "score": 0.8,
      },
      Object {
        "score": 0.2,
      },
      Object {
        "score": 0.67,
      },
      Object {
        "score": 0.71,
      },
    ],
    "sharedId": "3",
    "status": "completed",
    "totalResults": 4,
  },
  Object {
    "numRelevant": 2,
    "relevantRate": 0.6666666666666666,
    "results": Array [
      Object {
        "score": 0.7,
      },
      Object {
        "score": 0.9,
      },
      Object {
        "score": 0.3,
      },
    ],
    "sharedId": "2",
    "status": "completed",
    "totalResults": 3,
  },
]
`;

exports[`semanticSearch listSearchResultsDocs should return the shared id and templates of all results that match the filters 1`] = `
Array [
  Object {
    "sharedId": "2",
    "template": "t2",
  },
  Object {
    "sharedId": "3",
    "template": "t3",
  },
  Object {
    "sharedId": "4",
    "template": "t4",
  },
]
`;

exports[`semanticSearch processDocument should save the results of the document sorted by score in descending order, and compute average score 1`] = `
Array [
  Object {
    "page": "2",
    "score": 0.6,
    "text": "page 2",
  },
  Object {
    "page": "1",
    "score": 0.2,
    "text": "page 1",
  },
]
`;

exports[`semanticSearch processSearchLimit should return the updated search and processed documents 1`] = `
Object {
  "processedDocuments": Array [
    "doc2",
    "doc3",
  ],
  "updatedSearch": Object {
    "documents": Array [
      Object {
        "sharedId": "doc1",
        "status": "completed",
      },
      Object {
        "sharedId": "doc2",
        "status": "completed",
      },
      Object {
        "sharedId": "doc3",
        "status": "completed",
      },
      Object {
        "sharedId": "doc4",
        "status": "completed",
      },
      Object {
        "sharedId": "doc5",
        "status": "pending",
      },
    ],
    "language": "en",
    "searchTerm": "injustice",
    "status": "inProgress",
  },
}
`;
